# tomaba

./: .gitignore  Dockerfile  SETUP.md  pyproject.toml  server.py  tasks.md
.github/workflows/: deploy.yml
tomaba/: Dockerfile  SETUP.md  agent.py  bot.py  prompt.py  pyproject.toml  run.py  server.py  test.py
tomaba-frontend/: index.html  package.json
tomaba-frontend/src/: App.tsx  AppBar.tsx  CreatePage.tsx  RecipeCard.tsx  RecipeList.tsx  RecipePage.tsx
tomaba/models/: recipe.py
tomaba/tests/: firestore.py  mistral-discord.py
